fixed legibility on body

--- a/sass/base/_grid.scss
+++ b/sass/base/_grid.scss
@@ -4,8 +4,7 @@
     border-top: 5px solid black;
   }
   .col {
-    background: rgba(208, 208, 208, 0.2);
-    text-align:center;
+    background: rgba(208, 208, 208, 0.1);
     color: #777;
     border: 1px solid white;
   }
