--- a/sass/ui/_list.scss
+++ b/sass/ui/_list.scss
@@ -3,6 +3,7 @@ ul, ol{
 	margin: 15px 0 15px 15px;
 	padding-left: 15px;
 	float: left;
+	list-style: none;
 }
 li{
 	clear: both;
