--- a/sass/ui/_table.scss
+++ b/sass/ui/_table.scss
@@ -2,8 +2,9 @@
 td, th {
 	padding: 5px;
 }
-tr.even{
+tr.ui_table-even{
 	border-top: 1px dotted;
 	border-bottom: 1px dotted;
+	background: rgba(0,0,0,.05);
 }
 // custom
